actually fix overlap

--- a/app/assets/stylesheets/deep-insights/themes/scss/map/_embed.scss
+++ b/app/assets/stylesheets/deep-insights/themes/scss/map/_embed.scss
@@ -135,7 +135,7 @@ $cEmbedTabs-Shadow: rgba(0, 0, 0, 0.24);
 @media (max-width: $sMedia-l) {
   .CDB-Map .CDB-Legends-canvas,
   .CDB-Map .CDB-Legends-canvasInner {
-    max-height: calc(100vh - 293px);
+    max-height: calc(100vh - 300px);
   }
 }
 
